Update events view adding map and style

--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
     "apollo-link-http": "^1.5.9",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
+    "leaflet": "^1.4.0",
+    "moment": "^2.24.0",
     "react-apollo": "^2.4.1",
+    "react-leaflet": "^2.2.0",
     "react-markdown": "^4.0.6",
+    "react-moment": "^0.8.4",
     "semantic-ui-react": "^0.84.0"
   }
 }
