--- a/pycon_graphql/requirements.txt
+++ b/pycon_graphql/requirements.txt
@@ -4,6 +4,8 @@ attrs==18.2.0
 coverage==4.5.2
 Django==2.1.5
 django-simplemde==0.1.3
+django-graphql-extensions==0.0.6
+django-graphql-jwt==0.2.0
 factory-boy==2.11.1
 Faker==1.0.2
 graphene==2.1.3
