--- a/pycon_graphql/requirements.txt
+++ b/pycon_graphql/requirements.txt
@@ -1,22 +1,43 @@
 aniso8601==3.0.2
+appdirs==1.4.3
+appnope==0.1.0
 atomicwrites==1.2.1
 attrs==18.2.0
+backcall==0.1.0
+black==18.9b0
+Click==7.0
 coverage==4.5.2
+decorator==4.3.2
 Django==2.1.5
-django-simplemde==0.1.3
+django-filter==2.1.0
+django-filters==0.2.1
+django-graph-auth==0.3.1
 django-graphql-extensions==0.0.6
 django-graphql-jwt==0.2.0
+django-simplemde==0.1.3
+djangorestframework==3.9.1
+djangorestframework-jwt==1.11.0
 factory-boy==2.11.1
 Faker==1.0.2
 graphene==2.1.3
 graphene-django==2.2.0
 graphql-core==2.1
 graphql-relay==0.4.5
+ipython==7.2.0
+ipython-genutils==0.2.0
+jedi==0.13.2
 more-itertools==5.0.0
+parso==0.3.2
+pexpect==4.6.0
+pickleshare==0.7.5
 Pillow==5.4.1
 pluggy==0.8.1
 promise==2.2.1
+prompt-toolkit==2.0.7
+ptyprocess==0.6.0
 py==1.7.0
+Pygments==2.3.1
+PyJWT==1.7.1
 pytest==4.1.1
 pytest-cov==2.6.1
 pytest-django==3.4.5
@@ -25,4 +46,9 @@ pytz==2018.9
 Rx==1.6.1
 singledispatch==3.4.0.3
 six==1.12.0
+snapshottest==0.5.0
+termcolor==1.1.0
 text-unidecode==1.2
+toml==0.10.0
+traitlets==4.3.2
+wcwidth==0.1.7
